fix: options alignment issue

--- a/menu/text-formatter/style.css
+++ b/menu/text-formatter/style.css
@@ -1,3 +1,4 @@
 .text-formatter { width: auto; justify-content: space-around; display: flex; z-index: 0; flex-wrap: wrap;}
 .option {display:flex; flex-wrap: wrap; justify-content: space-between; height: 40px;}
+.optionDiffrentiate {width:100%;}
 .btn {padding: 0.5em 1.1em;}
